[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secretscreen"
version = "0.1.0"
description = "Detect and redact secrets in key-value pairs, dicts, and environment variables."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Cron", email = "cron@featurecreep.dev" }]
keywords = ["secrets", "redaction", "security", "environment", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/featurecreep-cron/secretscreen"
Repository = "https://github.com/featurecreep-cron/secretscreen"
Issues = "https://github.com/featurecreep-cron/secretscreen/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/secretscreen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["SIM102", "SIM108"]
